--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -66,8 +66,8 @@ jobs:
   # Job 7: Integration testing
   integration-testing:
     name: Integration Testing
-    needs: [ basic-validation, validate-client, validate-server, validate-cron, validate-scripts, validate-docs ]
-    if: needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true'
+    needs: [ basic-validation, validate-server ]
+    if: (needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true') && needs.validate-server.result == 'success'
     uses: ./.github/workflows/validate-integration.yml
     secrets:
       API_SECURITY_KEY: ${{ secrets.API_SECURITY_KEY }}
@@ -86,8 +86,8 @@ jobs:
   e2e-testing:
     name: E2E Testing
     runs-on: ubuntu-latest
-    needs: [ integration-testing ]
-    if: needs.basic-validation.outputs.client-changed == 'true' || needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true'
+    needs: [ basic-validation, validate-client, validate-server, integration-testing ]
+    if: always() && needs.basic-validation.result == 'success' && (needs.basic-validation.outputs.client-changed == 'true' || needs.basic-validation.outputs.server-changed == 'true' || needs.basic-validation.outputs.github-changed == 'true') && (needs.integration-testing.result == 'success' || needs.integration-testing.result == 'skipped') && (needs.validate-client.result == 'success' || needs.validate-client.result == 'skipped') && (needs.validate-server.result == 'success' || needs.validate-server.result == 'skipped')
     timeout-minutes: 30
     steps:
       - name: Checkout repository
