fix: Update railway build script to ensure correct directory navigation

--- a/server/railway.toml
+++ b/server/railway.toml
@@ -1,7 +1,10 @@
 [build]
-builder = "RAILPACK"
+builder = "NIXPACKS"
 buildCommand = "./scripts/railway-build.sh"
 #watchPatterns = ["server/**"]
+
+[variables]
+NODE_VERSION = "22"
 
 [source]
 repo = "jayc13/my-dashboard"
