fix: Add package.json and package-lock.json for workspace configuration

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -8,7 +8,8 @@
     "outDir": "./dist",
     "rootDir": "./src",
     "resolveJsonModule": true,
-    "sourceMap": true
+    "sourceMap": true,
+    "skipLibCheck": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"]
