--- a/cron/railway.toml
+++ b/cron/railway.toml
@@ -1,15 +1,14 @@
 [build]
-builder = "NIXPACKS"
-buildCommand = "npm run build"
+buildCommand = "./scripts/railway-cron-build.sh"
 watchPatterns = ["cron/**"]
 
 [source]
 repo = "jayc13/my-dashboard"
 branch = "main"
-rootDirectory = "cron"
+rootDirectory = ""
 
 [deploy]
-startCommand = "npm start"
+startCommand = "cd cron && npm start"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 cronJobsEnabled = true
