--- a/.github/workflows/validate-server.yml
+++ b/.github/workflows/validate-server.yml
@@ -38,23 +38,15 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v5
 
-      - name: Setup Node.js for @my-dashboard/types
+      - name: Setup Node.js
         uses: ./.github/actions/setup-node
         with:
           node-version: ${{ inputs.node-version }}
-          working-directory: ./packages/types
-          cache-dependency-path: ./packages/types/package-lock.json
-
-      - name: Setup Node.js for server
-        uses: ./.github/actions/setup-node
-        with:
-          node-version: ${{ inputs.node-version }}
-          working-directory: ${{ inputs.working-directory }}
-          cache-dependency-path: ${{ inputs.working-directory }}/package-lock.json
+          working-directory: ${{ github.workspace }}
 
       - name: Build @my-dashboard/types
-        working-directory: ./packages/types
-        run: npm run build
+        run: npm run build --workspace=packages/types
+        working-directory: ${{ github.workspace }}
 
       - name: Type check
         run: npx tsc --noEmit
