fix: Enhance integration tests for Todo API and improve database cleanup utility

--- a/tests/integration-tests/.env.example
+++ b/tests/integration-tests/.env.example
@@ -12,3 +12,10 @@ TEST_TIMEOUT=30000
 
 # Node environment
 NODE_ENV=test
+
+# MySQL Configuration
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=root
+MYSQL_PASSWORD=your-mysql-password
+MYSQL_DATABASE=cypress_dashboard
