feat: Integrate SDK for Todo operations and refactor API calls

--- a/client/tsconfig.app.json
+++ b/client/tsconfig.app.json
@@ -21,11 +21,11 @@
     "noUnusedParameters": true,
     "erasableSyntaxOnly": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
   },
   "include": [
     "src",
     "test",
     "node_modules/vitest/globals.d.ts"
-  ]
+  ],
 }
