--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.1",
     "@mui/x-data-grid": "^8.11.2",
+    "@my-dashboard/sdk": "file:../packages/sdk",
     "@my-dashboard/types": "file:../packages/types",
     "firebase": "^12.2.1",
     "luxon": "^3.7.2",
