ci: Update build configurations to include SDK workspace

--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -110,6 +110,7 @@ jobs:
         run: |
           npm run build \
             --workspace=packages/types \
+            --workspace=packages/sdk \
             --workspace=server \
             --workspace=client
 
