chore: Update build command to include SDK workspace in validate-client.yml

--- a/.github/workflows/validate-client.yml
+++ b/.github/workflows/validate-client.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Build dependencies
         run: |
           npm run build \
-            --workspace=@my-dashboard/types
+            --workspace=@my-dashboard/types \
             --workspace=@my-dashboard/sdk
         working-directory: ${{ github.workspace }}
 
