feat: Add GITHUB_URL to GitHub service configuration

--- a/server/.env.example
+++ b/server/.env.example
@@ -21,7 +21,10 @@ FIREBASE_CLIENT_CERT_URL=https://www.googleapis.com/robot/v1/metadata/x509/fireb
 # Circle CI Configuration
 CIRCLE_CI_TOKEN=your-circle-ci-token
 E2E_PIPELINE_URL=circle-ci-pipeline-url
+
+# GitHub Configuration
 GITHUB_TOKEN=your-github-token
+GITHUB_URL=https://api.github.com
 
 # Other existing environment variables
 CYPRESS_API_KEY=your-cypress-api-key
