feat: Add mock-server to project dependencies in package.json

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "client",
     "cron",
     "scripts",
+    "mock-server",
     "tests/e2e-tests",
     "tests/integration-tests",
     "packages/sdk",
