feat: Rename lint:fix script to lint-fix in package.json

--- a/mock-server/package.json
+++ b/mock-server/package.json
@@ -11,7 +11,7 @@
     "clean": "rm -rf dist",
     "test": "jest",
     "lint": "eslint src --ext .ts",
-    "lint:fix": "eslint src --ext .ts --fix"
+    "lint-fix": "eslint src --ext .ts --fix"
   },
   "dependencies": {
     "express": "^4.18.2",
