fix: Update Node.js engine version to v22.19.0 in package.json

--- a/cron/package.json
+++ b/cron/package.json
@@ -25,5 +25,8 @@
     "globals": "^16.4.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
+  },
+  "engines": {
+    "node": "v22.19.0"
   }
 }
