--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -19,16 +19,6 @@
     "prepublishOnly": "npm run clean && npm run build",
     "dev": "tsc --watch"
   },
-  "keywords": [
-    "typescript",
-    "interfaces",
-    "types",
-    "entities",
-    "dashboard",
-    "shared"
-  ],
-  "author": "Javier Caballero",
-  "license": "MIT",
   "devDependencies": {
     "typescript": "^5.9.2"
   },
@@ -89,9 +79,7 @@
       "require": "./dist/models/sdk/index.js"
     }
   },
-  "repository": {
-    "type": "git",
-    "url": "git@github.com:jayc13/my-dashboard.git",
-    "directory": "packages/entity"
+  "engines": {
+    "node": "v22.19.0"
   }
 }
