--- a/client/package.json
+++ b/client/package.json
@@ -54,5 +54,8 @@
     "typescript-eslint": "^8.43.0",
     "vite": "^7.1.5",
     "vitest": "^3.2.4"
+  },
+  "engines": {
+    "node": "v22.19.0"
   }
 }
