--- a/cron/railway.toml
+++ b/cron/railway.toml
@@ -8,7 +8,7 @@ branch = "main"
 rootDirectory = ""
 
 [deploy]
-startCommand = "cd cron && npm start"
+startCommand = "cd cron && pnpm start"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
 cronJobsEnabled = true
