--- a/packages/types/package.json
+++ b/packages/types/package.json
@@ -16,7 +16,7 @@
     "lint": "echo \"No linting configured\"",
     "lint-fix": "echo \"No linting configured\"",
     "test": "echo \"No tests configured\"",
-    "prepublishOnly": "npm run clean && npm run build",
+    "prepublishOnly": "pnpm run clean && pnpm run build",
     "dev": "tsc --watch"
   },
   "devDependencies": {
