--- a/scripts/package.json
+++ b/scripts/package.json
@@ -5,10 +5,14 @@
   "main": "inject-firebase-config.js",
   "scripts": {
     "build": "echo \"No build step required\"",
-    "test": "echo \"No tests configured\"",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "prepare": "husky",
     "replace-env": "node inject-firebase-config.js",
     "check-todos": "./check-todos.sh",
+    "validate-commits": "commitlint --from=HEAD~1",
+    "test-commit-msg": "node test-commit-msg.js",
     "lint": "eslint .",
     "lint-fix": "eslint . --fix"
   },
@@ -22,7 +26,9 @@
     "@commitlint/config-conventional": "^19.8.1",
     "@eslint/js": "^9.35.0",
     "eslint": "^9.35.0",
-    "globals": "^16.4.0"
+    "globals": "^16.4.0",
+    "jest": "^30.1.3",
+    "@types/jest": "^30.0.0"
   },
   "engines": {
     "node": "v22.19.0"
