fix: resolve commitlint dependency issue in CI

--- a/.github/actions/setup-validation/action.yml
+++ b/.github/actions/setup-validation/action.yml
@@ -35,3 +35,9 @@ runs:
         key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
         restore-keys: |
           ${{ runner.os }}-pnpm-store-
+
+    - name: Install dependencies
+      shell: bash
+      run: |
+        echo "📦 Installing dependencies..."
+        npx pnpm install --registry=https://registry.npmjs.org/
