--- a/.github/workflows/validate-client.yml
+++ b/.github/workflows/validate-client.yml
@@ -35,6 +35,7 @@ jobs:
         with:
           node-version: ${{ inputs.node-version }}
           working-directory: ${{ github.workspace }}
+          project: client
 
       - name: Build dependencies
         run: |
