ci: Update actions

--- a/.github/workflows/validate-tests-integration.yml
+++ b/.github/workflows/validate-tests-integration.yml
@@ -37,47 +37,9 @@ jobs:
       - name: Run type checking
         run: |
           echo "🔍 Running TypeScript type checking..."
-          cd tests/integration-tests
-          npx tsc --noEmit || echo "⚠️ Type checking completed with warnings"
+          pnpm run type-check --filter=tests/integration-tests || echo "⚠️ Type checking completed with warnings"
 
       - name: Build tests
         run: |
           echo "🏗️ Building integration tests..."
           pnpm run build --filter=tests/integration-tests
-
-      - name: Validate test structure
-        run: |
-          echo "🔍 Validating test structure..."
-          cd tests/integration-tests
-          
-          # Check for test files
-          if [ ! -d "src" ] && [ ! -d "tests" ] && [ ! -f "*.test.ts" ] && [ ! -f "*.test.js" ]; then
-            echo "❌ No test files found"
-            exit 1
-          fi
-          
-          echo "✅ Test structure validated"
-
-      - name: Run dry-run tests
-        run: |
-          echo "🧪 Running dry-run of integration tests..."
-          cd tests/integration-tests
-          
-          # Check if test script exists and run in dry-run mode if possible
-          if pnpm run test --help 2>/dev/null | grep -q "dry-run\|list-tests"; then
-            pnpm run test --dry-run || pnpm run test --list-tests || echo "✅ Test dry-run completed"
-          else
-            echo "✅ Test validation completed (no dry-run available)"
-          fi
-
-      - name: Verify test configuration
-        run: |
-          echo "🔍 Verifying test configuration..."
-          cd tests/integration-tests
-          
-          # Check for common test configuration files
-          if [ -f "jest.config.js" ] || [ -f "jest.config.json" ] || [ -f "vitest.config.ts" ] || [ -f "vitest.config.js" ]; then
-            echo "✅ Test configuration found"
-          else
-            echo "⚠️ No test configuration found (may be using defaults)"
-          fi
